<resources>
    <string name="app_name">Craftsman</string>
    <string name="app_name_short">Craftsman</string>

    <!-- Add -->
    <string name="al_exo_controls_playback_speed_normal">Normal</string>
    <string name="xbid_catchall_error_android">Sorry, something went wrong. Give it another try, or try on &lt;u&gt;Xbox.com&lt;/u&gt;</string>
    <string name="ic_Close"></string>
    <string name="TextInput_Confirm">Done</string>
    <string name="ChangeRelationship_Checkbox_Subtext_ShareRealName_Everyone">You share your real name with everyone on Xbox. Make changes in the Xbox app.</string>
    <string name="ChangeRelationship_Checkbox_Subtext_ShareRealName_Friends">You share your real name with all your friends on Xbox. Make changes in the Xbox app.</string>
    <string name="ChangeRelationship_Checkbox_Subtext_ShareRealName">Let %1$s see my real name. It may help them recognise who you are.</string>
    <string name="RealNameSharing_ErrorChangeRemove">Sorry, we can\'t save your changes right now. Try again in a while.</string>
    <string name="RealNameSharing_ErrorAddingFriend">Sorry, we can\'t add this person right now. Try again in a while.</string>
    <string name="Global_MissingPrivilegeError_DialogBody">You can\'t access this feature because of how your account is set up. You can change this by modifying your privacy settings.</string>
    <string name="OK_Text">OK</string>
    <string name="xbid_creation_error_android">Sorry, we couldn\'t complete your Xbox profile. If it happens again, try setting it up at &lt;u&gt;Xbox.com&lt;/u&gt;</string>
    <string name="ProfileCard_Block_Error">Sorry, we can\'t block this person right now. Click Block to try again.</string>
    <string name="ProfileCard_Block_Subtext">You\'ll no longer get their messages or invites. You won\'t be matched up in games, and they can no longer see your online activity. If they were on your friends list, we removed them.</string>
    <string name="ProfileCard_Report">Report</string>
    <string name="ProfileCard_Report_BioLoc">Bio or location</string>
    <string name="ProfileCard_Report_Cheating">Cheating</string>
    <string name="ProfileCard_Report_Error">We couldn\'t send your report. Click Report to Xbox to try again.</string>
    <string name="ProfileCard_Report_InappropriateComment">Inappropriate comment</string>
    <string name="ProfileCard_Report_InappropriateFeedItem">Inappropriate feed item</string>
    <string name="ProfileCard_Report_InappropriateGameClip">Inappropriate game clip</string>
    <string name="ProfileCard_Report_InappropriateScreenshot">Inappropriate screenshot</string>
    <string name="ProfileCard_Report_InfoString_Android">Why are you reporting %1$s?</string>
    <string name="ProfileCard_Report_Message">Message</string>
    <string name="ProfileCard_Report_PlayerName">Player name or gamertag</string>
    <string name="ProfileCard_Report_PlayerPic">Player picture</string>
    <string name="ProfileCard_Report_QuitEarly">Quitting early</string>
    <string name="ProfileCard_Report_SelectReason">Select a reason</string>
    <string name="ProfileCard_Report_Spam">Spam</string>
    <string name="ProfileCard_Report_SubmitButton">Report to Xbox</string>
    <string name="ProfileCard_Report_Success">Your feedback has been sent to Xbox.</string>
    <string name="ProfileCard_Report_SuccessSubtext">Thanks for taking the time to help make Xbox a better place to play.</string>
    <string name="ProfileCard_Report_TextReasonHint">Tell us more (optional)</string>
    <string name="ProfileCard_Report_Unsporting">Unsporting behavior</string>
    <string name="ProfileCard_Report_VoiceComm">Voice communication</string>
    <string name="Profile_BioHeader">Bio</string>
    <string name="Profile_ChangeFriendship">Change friendship</string>
    <string name="Profile_LocationHeader">Location</string>
    <string name="Profile_Profile_AddFriend">Add friend</string>
    <string name="Profile_Profile_Block">Block</string>
    <string name="Profile_Profile_Followers">Followers</string>
    <string name="Profile_Profile_Friends">Friends</string>
    <string name="Profile_Profile_RemoveFriend">Remove friend</string>
    <string name="Profile_Profile_Unblock">Unblock</string>
    <string name="Profile_ViewInXboxApp">View in the Xbox app</string>
    <string name="Profile_ViewInXboxApp_Details_MeProfile">Customize your profile and more</string>
    <string name="Profile_ViewInXboxApp_Details_YouProfile">Send messages, see game clips, and more</string>
    <string name="xbid_first_and_last_name_android">%1$s %2$s</string>
    <string name="http_auth_dialog_cancel">Cancel</string>
    <string name="http_auth_dialog_login">Login</string>
    <string name="http_auth_dialog_password">Password</string>
    <string name="http_auth_dialog_title">Enter your credentials</string>
    <string name="http_auth_dialog_username">Username</string>
    <string name="Service_ErrorText">Something went wrong. Please try again later.</string>
    <string name="Messages_Error_FailedToBlockUser">Could not block the user</string>
    <string name="Messages_Error_FailedToMuteUser">Could not mute the user</string>
    <string name="Messages_Error_FailedToUnblockUser">Could not unblock the user</string>
    <string name="Messages_Error_FailedToUnmuteUser">Could not unmute the user</string>
    <string name="Messages_BlockUserConfirmation_DialogTitle">Are you sure?</string>
    <string name="MessageDialog_Cancel">Cancel</string>
    <string name="Messages_BlockUserConfirmation_DialogBody">Are you sure you want to block this sender?</string>
    <string name="Messages_ViewInXboxApp_DialogBody">Following this link may interrupt a game in progress</string>
    <string name="ConnectDialog_ContinueAsGuest">Continue</string>
    <string name="ic_Accept"></string>
    <string name="ic_ApplicationLaunch"></string>
    <string name="ic_BadRecommendation"></string>
    <string name="ic_Complaint"></string>
    <string name="ic_Edit"></string>
    <string name="ic_Favorite"></string>
    <string name="ic_GamerScore"></string>
    <string name="ic_PhoneCall"></string>
    <string name="ic_PlayerAdd"></string>
    <string name="ic_RemoveFriend"></string>
    <string name="ic_Repeat"></string>
    <string name="ic_Search"></string>
    <string name="ic_VolumeDisabled2"></string>
    <string name="ic_VolumeMute"></string>
    <string name="ic_Warning"></string>
    <string name="ic_changeFriendShip"></string>
    <string name="Narrator_Mute">Mute</string>
    <string name="Narrator_Unmute">Unmute</string>
    <string name="ChangeRelationship_Checkbox_Subtext_ShareRealName_Alt">%1$s may not recognise you as %2$s. They are sharing their name with you. Check the box to share with them.</string>
    <string name="ChangeRelationship_Label_Favorite">Favorite</string>
    <string name="ChangeRelationship_Label_Friend">Friend</string>
    <string name="ChangeRelationship_RadioButton_Subtext_Favorite">Favorite friends go first on your friends list. You\'ll see when they go online or start broadcasting.</string>
    <string name="ChangeRelationship_RadioButton_Subtext_Friend">Friends show up on your friends list and activity feed. They see you as a new follower.</string>
    <string name="xbid_age_group_adult">Adult default</string>
    <string name="xbid_age_group_adult_details_android">Your friends and their friends can see if you\'re online, your game clips, and your recent apps and games. You can change these on &lt;u&gt;Xbox.com&lt;/u&gt;</string>
    <string name="xbid_age_group_child">Child default</string>
    <string name="xbid_age_group_child_details_android">Your Xbox friends can see your profile, but not your real name. Friends and their friends can see if you\'re online and available to play, but you\'ll need a parent\'s permission to add friends</string>
    <string name="xbid_age_group_teen">Teen default</string>
    <string name="xbid_age_group_teen_details_android">Your Xbox friends and their friends can see your real name and your profile. Your Xbox friends can see if you\'re online, your game clips, and your recent apps and games</string>
    <string name="xbid_another_gamertag">Already have a gamertag?</string>
    <string name="xbid_another_sign_in">Sign in with a different Microsoft account</string>
    <string name="xbid_ban_error_body_android">We can\'t sign you in because your account has been suspended from Xbox Live.</string>
    <string name="xbid_ban_error_header_android">Hi, %1$s.</string>
    <string name="xbid_claim_it">Claim it!</string>
    <string name="xbid_close">Close</string>
    <string name="xbid_customize_profile">You can customize your profile in the Xbox app</string>
    <string name="xbid_different_gamer_tag_answer">Switch accounts</string>
    <string name="xbid_error_offline_android">Make sure you\'re online, then try again. We can\'t connect right now.</string>
    <string name="xbid_friend_finder_opt_in">Find friends</string>
    <string name="xbid_gamerpic_choose_your_gamerpic">Choose your gamerpic</string>
    <string name="xbid_gamertag_available">Available!</string>
    <string name="xbid_gamertag_check_availability">Check availability</string>
    <string name="xbid_gamertag_checking_android">Checking…</string>
    <string name="xbid_gamertag_checking_error">An error occurred. Try again?</string>
    <string name="xbid_gamertag_not_available_android">That\'s taken. How about:</string>
    <string name="xbid_gamertag_not_available_no_suggestions_android">That\'s taken.</string>
    <string name="xbid_gamertag_placeholder">Gamertag</string>
    <string name="xbid_introducing_android">Introducing…</string>
    <string name="xbid_lets_play_android">Let\'s play</string>
    <string name="xbid_more_info">More info</string>
    <string name="xbid_next">Next</string>
    <string name="xbid_privacy_settings_header_android">Privacy settings: %1$s</string>
    <string name="xbid_sign_up_header">Welcome to Xbox</string>
    <string name="xbid_sign_up_subheader_android">Here\'s your name on Xbox (or \"gamertag\"). Change it if you want!</string>
    <string name="xbid_start_broadcasting">Start Broadcasting</string>
    <string name="xbid_tools_email">john.smith@hotmail.com</string>
    <string name="xbid_tools_empty" />
    <string name="xbid_tools_gamertag">MasterChef</string>
    <string name="xbid_tools_user_name">John Smith</string>
    <string name="xbid_try_again">Try again</string>
    <string name="xbid_voice_over_close_button_text">Close</string>
    <string name="xbid_voice_over_game_score_label_text">Gamerscore</string>
    <string name="xbid_welcome_back">Welcome back!</string>
    <string name="xbox_live_game_invite_body">%1$s has invited you to play %2$s</string>
    <string name="xbox_live_game_invite_title">Game invite</string>
    <string name="xperiaplayoptimized_content">true</string>
	
    <!-- NativeAd BEGIN -->
    <string name="ad_attribution">Ad</string>
    <!-- NativeAd END -->
	
</resources>