<?xml version="1.0" encoding="utf-8"?>
<com.microsoft.xbox.xle.ui.XLERootView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xle="http://schemas.android.com/apk/res-auto" android:id="@+id/profile_root" android:background="@drawable/background_default" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
        <FrameLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="2">
            <com.microsoft.xbox.toolkit.ui.XLERoundedUniversalImageView android:layout_gravity="center" android:id="@+id/profile_gamerpic" android:layout_width="@dimen/profileMsaPicSize" android:layout_height="@dimen/profileMsaPicSize" android:src="@drawable/placeholder_x" android:maxWidth="@dimen/profileMsaPicSize" android:maxHeight="@dimen/profileMsaPicSize" android:cropToPadding="false"/>
        </FrameLayout>
        <FrameLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="3">
            <com.microsoft.xbox.toolkit.ui.FastProgressBar android:layout_gravity="center" android:id="@+id/profile_screen_loading" android:visibility="visible" android:layout_width="64dp" android:layout_height="64dp" android:indeterminateOnly="true" android:indeterminateDrawable="@drawable/rotate_loading_rings_small"/>
            <ScrollView android:id="@+id/profile_screen_content_list" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:paddingTop="15dp" android:paddingBottom="15dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:textSize="17sp" android:id="@+id/profile_realname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30dp" android:layout_marginBottom="4dp" android:singleLine="true" android:maxLength="30" style="@style/SUI_white"/>
                        <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:textSize="17sp" android:layout_gravity="center_vertical" android:id="@+id/profile_gamerscore_icon" android:visibility="gone" android:layout_marginTop="1dp" android:layout_marginRight="1dp" android:text="@string/ic_GamerScore" style="@style/xbox_symbol"/>
                        <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:textSize="17sp" android:id="@+id/profile_gamerscore" android:padding="2dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:includeFontPadding="false" style="@style/SUI_white"/>
                    </LinearLayout>
                    <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:textSize="40sp" android:textStyle="bold" android:ellipsize="end" android:id="@+id/profile_gamertag" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:singleLine="true" android:includeFontPadding="false" style="@style/SUI_white"/>
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton android:id="@+id/profile_follow" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="@dimen/profileMsaPicSize" android:layout_height="@dimen/profileSocialButtonsHeight" android:layout_marginLeft="-5dp" android:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:icon_checked="@string/ic_changeFriendShip" xle:icon_size="16sp" xle:icon_unchecked="@string/ic_PlayerAdd" xle:text_checked="@string/Profile_ChangeFriendship" xle:text_unchecked="@string/Profile_Profile_AddFriend"/>
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton android:id="@+id/profile_mute" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="@dimen/profileMsaPicSize" android:layout_height="@dimen/profileSocialButtonsHeight" android:layout_marginLeft="-5dp" android:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:icon_checked="@string/ic_VolumeDisabled2" xle:icon_size="18sp" xle:icon_unchecked="@string/ic_VolumeMute" xle:text_checked="@string/Narrator_Unmute" xle:text_unchecked="@string/Narrator_Mute"/>
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton android:id="@+id/profile_report" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="@dimen/profileMsaPicSize" android:layout_height="@dimen/profileSocialButtonsHeight" android:layout_marginLeft="-5dp" android:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:icon_checked="@string/ic_Complaint" xle:icon_size="16sp" xle:icon_unchecked="@string/ic_Complaint" xle:text_checked="@string/ProfileCard_Report" xle:text_unchecked="@string/ProfileCard_Report"/>
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton android:id="@+id/profile_block" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="@dimen/profileMsaPicSize" android:layout_height="@dimen/profileSocialButtonsHeight" android:layout_marginLeft="-5dp" android:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:icon_checked="@string/ic_BadRecommendation" xle:icon_size="14sp" xle:icon_unchecked="@string/ic_BadRecommendation" xle:text_checked="@string/Profile_Profile_Unblock" xle:text_unchecked="@string/Profile_Profile_Block"/>
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton android:id="@+id/profile_view_in_xbox_app" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="@dimen/profileMsaPicSize" android:layout_height="@dimen/profileSocialButtonsHeight" android:layout_marginLeft="-5dp" android:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:icon_checked="@string/ic_ApplicationLaunch" xle:icon_size="14sp" xle:icon_unchecked="@string/ic_ApplicationLaunch" xle:text_checked="@string/Profile_ViewInXboxApp" xle:text_unchecked="@string/Profile_ViewInXboxApp"/>
                    <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:textSize="13sp" android:textStyle="italic" android:layout_gravity="center_vertical" android:id="@+id/profile_view_in_xbox_app_subtext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="35dp" android:layout_marginTop="-10dp" android:includeFontPadding="false" xle:typefaceSource="fonts/SegoeWP.ttf" style="@style/standard_subText"/>
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>
</com.microsoft.xbox.xle.ui.XLERootView>
